# JellyCraft-Discord-Bot

./: .gitignore  analytics_chart.py  analytics_gather.py  analytics_leaderboard.py  analytics_process.py  check  config.json  functions_and_testing.md  kill  killdetatchedscreens  main.py  pyproject.toml  readme.md  requirements.txt  restart  runwatchdog  store_lookup.json  watchdog.py
