[tool.poetry]
name = "jellycraft-discord-bot"
version = "0.1.0"
description = ""
authors = ["RRR-09 <79768142+RRR-09@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bar-chart-race = {git = "https://github.com/dexplo/bar_chart_race"}
python-dotenv = "^0.19.2"
pytz = "^2021.3"
"discord.py" = {extras = ["voice"], version = "^1.7.3"}
requests = "^2.26.0"
PyYAML = "^6.0"
mcipc = "^2.3.5"
pysftp = "^0.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
